<resources>
    <string name="app_name">Flamingo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_trangchu">Trang chủ</string>
    <string name="menu_khachhang">Khách hàng</string>
    <string name="menu_xuathoadon">Xuất hóa đơn</string>
    <string name="menu_quanlyxuatnhap">Quản lý xuất nhập</string>
    <string name="menu_nguoidung">Người dùng</string>
    <string name="menu_hotro">Hỗ trợ</string>
    <string name="menu_vechungtoi">Về chúng tôi</string>
    <string name="menu_dangxuat">Đăng xuất</string>
</resources>